Fix bad text wrapping in menu items (#273)
* Fix wrapping in menu items

* cleanup prettier error

--- a/resources/skins.femiwiki/interface.less
+++ b/resources/skins.femiwiki/interface.less
@@ -45,6 +45,10 @@
           }
         }
 
+        i {
+          display: flex;
+        }
+
         i::before {
           opacity: @opacity-icon;
           vertical-align: middle;
@@ -57,6 +61,7 @@
           font-family: @font-family;
           font-style: initial;
           font-weight: initial;
+          line-height: @line-height;
         }
       }
     }
